--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# add by rdc
+# add by wp
 /data/labels/*
 /data/JPEGImages/*
 /test_pic/*
@@ -149,4 +149,5 @@ dmypy.json
 yolov4.pdf
 test_project.py
 save_pd_weights.py
+/.vscode
 # val_pb.py
